--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "mongoose": "^5.4.3",
+    "path": "^0.12.7",
     "underscore": "^1.9.1"
   }
 }
